fix dark mode in css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,6 +149,18 @@ i {
   margin-left: -250px;
 }
 
+.darkMode{
+background: #000;
+color: #fff;
+transition: 2s;
+}
+
+.lightMode{
+background: #fff;
+color: #000;
+transition: 2s;
+}
+
 
 /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
 @media screen and (max-width: 600px) {
